<?xml version="1.0"?>
<package format="2">
  <name>tortoisebot_waypoints</name>
  <version>0.0.1</version>
  <description>The tortoisebot_waypoints package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tortoisebot_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>

  <test_depend>rostest</test_depend>
  <test_depend>unittest</test_depend>

  <export>
  </export>
</package>
